syntax = "proto3";

package auth;

option go_package = "./pkg/auth/pb";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Validate(ValidateRequest) returns (ValidateResponse) {}
}


enum UserType {
  CUSTOMER = 0;
  ADMIN = 1;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  UserType user_type = 3;
}

message RegisterResponse {
  int64 status = 1;
  string error = 2;
}


message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  int64 status = 1;
  string error = 2;
  string token = 3;
  UserType user_type = 4;
}


message ValidateRequest { 
  string token = 1; 
}

message ValidateResponse {
  int64 status = 1;
  string error = 2;
  int64 userId = 3;
  UserType user_type = 4;
}